[package]
name = "twiml-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["TwiML Rust Contributors"]
license = "MIT"
description = "TwiML (Twilio Markup Language) library for generating Voice, Messaging, and Fax XML responses"
repository = "https://github.com/Roshan0412/twiml-rust"
documentation = "https://docs.rs/twiml-rust"
readme = "README.md"
keywords = ["twiml", "xml", "voice", "messaging", "telephony"]
categories = ["api-bindings", "web-programming", "encoding"]
exclude = [".git*", "target/"]

[dependencies]
